# irccrab

./: Cargo.toml  README.md  flake.nix
src/: danger.rs  main.rs
