[package]
name = "irccrab"
description = "irc ping/ponger similar to ircdog"
version = "1.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", default-features = false, features = ["derive", "std", "help", "usage"] }
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std"]}
tokio-rustls = { version = "0.25.0", default-features = false, features = ["ring", "tls12"] }
tokio-socks = "0.5.1"

[profile.smol]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
lto = true
