[package]
name = "irccrab"
description = "irc ping/ponger similar to ircdog"
version = "1.3.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", default-features = false, features = ["derive", "std", "help", "usage"] }
irc-connect = { version = "0.1.0", features = ["ring", "tls12"] }
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "io-std", "fs"] }

[profile.smol]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
lto = true
